--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
 <body>
   <h1>Brick Buster</h1>
+
+  <!-- Rules Button -->
   <button id="rules-btn" class="btn rules-btn">Show Rules</button>
+
+  <!-- Rules Popup -->
   <div id="rules" class="rules">
     <h2>How To Play:</h2>
     <p>
@@ -22,13 +26,10 @@
     <button id="close-btn" class="btn">Close</button>
   </div>
 
+  <!-- Game Canvas -->
   <canvas id="canvas" width="800" height="600"></canvas>
-  <div class="controls">
-    <button id="left-btn" class="ctrl-btn">◀️</button>
-    <button id="right-btn" class="ctrl-btn">▶️</button>
-  </div>
 
-
+  <!-- Script -->
   <script src="script.js"></script>
 </body>
 
