--- a/index.html
+++ b/index.html
@@ -1,37 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="style.css" />
   <title>Brick Buster</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
   <h1>Brick Buster</h1>
-
-  <!-- Rules Button -->
   <button id="rules-btn" class="btn rules-btn">Show Rules</button>
-
-  <!-- Rules Popup -->
   <div id="rules" class="rules">
     <h2>How To Play:</h2>
-    <p>
-      Use your right and left keys to move the paddle to bounce the ball up
-      and break the blocks.
-    </p>
-    <p>If you miss the ball, your score and the blocks will reset.</p>
+    <p>Use your keyboard or swipe to move the paddle and bounce the ball to break blocks.</p>
+    <p>If you miss the ball, your score and bricks reset.</p>
     <button id="close-btn" class="btn">Close</button>
   </div>
 
-  <!-- Game Canvas -->
-  <canvas id="canvas" width="800" height="600"></canvas>
+  <canvas id="canvas"></canvas>
 
-  <!-- Script -->
   <script src="script.js"></script>
 </body>
-
 </html>
-
